added new modifications to my envo project

--- a/envo-project/David_kama/index.html
+++ b/envo-project/David_kama/index.html
@@ -59,8 +59,9 @@
           <div class="left-side">
             <div class="left-side-wrapper">
               <div class="left-side-greenbox"></div>
-              <img src="./images/Rectangle 2.png" class="img-3" alt="video">
-              <img class="play" src="./images/play.png" alt="play">
+              <!-- <video src="" class="mp3">./video.mp3</video> -->
+              <img src="./images/Rectangle 2.png" class="img-3" alt="video"> 
+              <img class="play" src="./images/play.png" alt="play"> 
             </div>
           </div>
           <div class="right-side">
